@@ -1,3 +1,8 @@
+AD-2004-02-06-1: Bugfix:    'sge_remote_event_delivery_handler' is now called
+                            after message.
+                 Changed:   qmaster
+                 Review:    CR
+
 AD-2004-02-06-0: Bugfix:    Use lock 'LOCK_GLOBAL'.
                  Changed:   spool
 
